--- a/package.json
+++ b/package.json
@@ -1,7 +1,60 @@
 {
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/plugin-transform-numeric-separator": "^7.27.1",
-    "react-scripts": "^0.0.0"
+    "@mui/x-data-grid": "^8.10.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "alerts": "^0.1.3",
+    "aos": "^2.3.4",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.12",
+    "icons": "^1.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
+    "react-data-grid": "^7.0.0-beta.57",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.8.1",
+    "react-scripts": "^5.0.1",
+    "sweet": "^0.1.1",
+    "sweetalert2": "^11.22.4",
+    "sweetalert2-react-content": "^5.1.0",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
