--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bspzzaka.vercel.app",
   "dependencies": {
     "@mui/x-data-grid": "^8.10.1",
     "@testing-library/dom": "^10.4.1",
@@ -20,7 +21,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-data-grid": "^7.0.0-beta.57",
+    "react-data-grid": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
