--- a/package.json
+++ b/package.json
@@ -2,35 +2,26 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bspzzaka.vercel.app",
   "dependencies": {
+    "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^8.10.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "alerts": "^0.1.3",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
-    "bootstrap": "^5.3.7",
-    "dayjs": "^1.11.13",
+    "bootstrap": "^5.3.8",
+    "dayjs": "^1.11.14",
     "framer-motion": "^12.23.12",
-    "icons": "^1.0.0",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
-    "jwt-decode": "^4.0.0",
-    "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-data-grid": "^6.1.0",
+    "react-data-grid": "7.0.0-beta.17",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
+    "react-icons": "4.10.1",
+    "react-leaflet": "4.2.1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
-    "sweet": "^0.1.1",
-    "sweetalert2": "^11.22.4",
+    "sweetalert2": "^11.22.5",
     "sweetalert2-react-content": "^5.1.0",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^5.1.0",
     "xlsx": "^0.18.5"
   },
   "scripts": {
@@ -56,10 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
   }
 }
